tests/reference/asr-structs_10-cb8a283.stderr
semantic error: The type 'StringIO' is undeclared.
 --> tests/errors/structs_10.py:7:25
  |
7 |     def print_len(self: StringIO):
  |                         ^^^^^^^^ 
